# gofcards_hg38_normalizer

./: .gitignore  README.md  environment.yml  pyproject.toml
src/gofcards_hg38/: __init__.py  api.py  audit_public.py  augment_hg38.py  cli.py  export_cache.py  hgnc.py  io_utils.py  pull_backend.py  refalt.py  schema.py  transvar_io.py  vep_io.py  workbook.py
